# api.yml
@@ -40,6 +40,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/RegistrationResponse'
+  /users/{id}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        description: The user identifier
+        schema:
+          type: integer
+          format: int64
+    get:
+      operationId: getUser
+      responses:
+        '200':
+          description: The user being returned
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetUserResponse'
+        '404':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetUserResponse'
 components:
   schemas:
     RegistrationRequest:
@@ -70,7 +94,7 @@ components:
 #            validate: required,min=6,max=64,regexp=^(?=.*?[A-Z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-])
     RegistrationResponse:
       type: object
-      required: [code, message]
+      required: [code, data, errors]
       properties:
         code:
           type: string
@@ -80,5 +104,23 @@ components:
             id:
               type: integer
               format: int64
+        errors:
+          type: array
+    GetUserResponse:
+      type: object
+      required: [code, data, errors]
+      properties:
+        code:
+          type: string
+        data:
+          type: object
+          properties:
+            id:
+              type: integer
+              format: int64
+            fullName:
+              type: string
+            phoneNumber:
+              type: string
         errors:
           type: array
