# handler/endpoints.go
@@ -15,14 +15,14 @@ func (s *Server) UserRegistration(ctx echo.Context) error {
 	if err := ctx.Bind(&request); err != nil {
 		errors = append(errors, err.Error())
 		return ctx.JSON(http.StatusBadRequest, generated.RegistrationResponse{
-			Code: string(ERROR), Errors: &errors,
+			Code: string(ERROR), Errors: errors,
 		})
 	}
 	regReqValidator := util.NewRegistrationRequestValidator()
 	errors = regReqValidator.Validate(request)
 	if errors != nil {
 		return ctx.JSON(http.StatusBadRequest, generated.RegistrationResponse{
-			Code: string(ERROR), Errors: &errors,
+			Code: string(ERROR), Errors: errors,
 		})
 	}
 	user, err := s.Repository.CreateUser(context.Background(), repository.CreateUserParams{
@@ -32,15 +32,35 @@ func (s *Server) UserRegistration(ctx echo.Context) error {
 		Password:    util.HashAndSaltPassword(request.Password),
 	})
 	if err != nil {
-		errors = append(make([]interface{}, 1), err.Error())
+		errors = append(errors, err.Error())
 		return ctx.JSON(http.StatusInternalServerError, generated.RegistrationResponse{
-			Code: string(ERROR), Errors: &errors,
+			Code: string(ERROR), Errors: errors,
 		})
 	}
 	data := struct {
 		Id *int64 `json:"id,omitempty"`
 	}{Id: &user.ID}
 	return ctx.JSON(http.StatusCreated, generated.RegistrationResponse{
-		Code: string(SUCCESS), Data: &data, Errors: nil,
+		Code: string(SUCCESS), Data: data,
+	})
+}
+
+func (s *Server) GetUser(ctx echo.Context, id int64) error {
+	var errors []interface{}
+	user, err := s.Repository.GetUser(context.Background(), id)
+	if err != nil {
+		errors = append(errors, "User not found")
+		return ctx.JSON(http.StatusNotFound, generated.GetUserResponse{
+			Code: string(ERROR), Errors: errors,
+		})
+	}
+	phoneNumber := user.CountryCode + user.PhoneNumber
+	data := struct {
+		FullName    *string `json:"fullName,omitempty"`
+		Id          *int64  `json:"id,omitempty"`
+		PhoneNumber *string `json:"phoneNumber,omitempty"`
+	}{Id: &user.ID, FullName: &user.FullName, PhoneNumber: &phoneNumber}
+	return ctx.JSON(http.StatusCreated, generated.GetUserResponse{
+		Code: string(SUCCESS), Data: data,
 	})
 }
