# repository/interfaces.go
@@ -8,4 +8,6 @@ import "context"
 
 type RepositoryInterface interface {
 	CreateUser(ctx context.Context, arg CreateUserParams) (User, error)
+
+	GetUser(ctx context.Context, id int64) (User, error)
 }
